# fnmatch

./: .gitignore  CHANGELOG.md  README.md  devenv.nix  fnmatch.cabal  stack.yaml
.github/workflows/: ci.yml
bench/: Main.hs
src/: FnMatch.hs
test/: Main.hs
