cabal-version:      3.4
name:               fnmatch
version:            0.1.0.0
synopsis:           fnmatch C wrapper
license:            Apache-2.0
license-file:       LICENSE
author:             Domen Kožar
maintainer:         domen@cachix.org
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall
    default-extensions: OverloadedStrings
    default-language: GHC2021
    build-depends: base, bytestring

library
    import:           warnings
    exposed-modules:  FnMatch
    hs-source-dirs:   src

test-suite fnmatch-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        fnmatch,
        hspec

benchmark fnmatch-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    build-depends:,
        fnmatch,
        criterion